feat: Refactor review process and enhance template handling with new TemplateService and updated templates